// Idea Fork - Database Schema for dbdiagram.io
// Copy and paste this into https://dbdiagram.io/d

Project IdeaFork {
  database_type: 'PostgreSQL'
  Note: 'AI-powered platform for discovering AI-generated product ideas'
}

// =============================================================================
// Categories Table
// =============================================================================
// Predefined categories for classifying ideas (AI, SaaS, E-commerce, etc.)

Table categories {
  id bigint [pk, increment, note: 'Primary key']
  name text [not null, unique, note: 'Category display name (e.g., "E-commerce")']
  slug text [not null, unique, note: 'URL-safe slug (e.g., "ecommerce")']
  color_variant text [not null, default: 'secondary', note: 'Badge color: primary, teal, orange, indigo, secondary']
  display_order int [not null, default: 0, note: 'Custom sort order for UI']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Predefined categories for classifying product ideas'
}

// =============================================================================
// Ideas Table
// =============================================================================
// Core table storing AI-generated product ideas with metadata and PRD content

Table ideas {
  id bigint [pk, increment, note: 'Primary key']
  title text [not null, note: 'Idea title']
  slug text [not null, unique, note: 'URL-safe unique identifier']

  // Thumbnail image
  image_url text [not null, note: 'Thumbnail image URL']
  image_alt text [not null, default: '', note: 'Image alt text']

  // Core idea content
  problem text [not null, note: 'Problem statement']
  solution text [not null, note: 'Proposed solution']
  target_users text [not null, note: 'Target user description']

  // Extended content
  key_features jsonb [not null, default: '[]', note: 'JSON array of key features']
  prd_content jsonb [note: 'Full PRD as structured JSONB']

  // Engagement metrics
  popularity_score int [not null, default: 0, note: 'Popularity metric (0-100)']
  view_count bigint [not null, default: 0, note: 'Total view count']

  // Publication workflow
  is_published boolean [not null, default: false, note: 'Publication status']
  published_at timestamptz [note: 'Publication timestamp']

  // Full-text search
  search_vector tsvector [note: 'Auto-populated search vector']

  // Timestamps
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'AI-generated product ideas with PRD content'

  indexes {
    (published_at) [name: 'ideas_published_at_idx', note: 'Sort by newest']
    (popularity_score, published_at) [name: 'ideas_popularity_idx', note: 'Sort by popularity']
    title [name: 'ideas_title_idx', note: 'Alphabetical sorting']
    (published_at, id) [name: 'ideas_cursor_pagination_idx', note: 'Cursor pagination']
  }
}

// =============================================================================
// Idea Categories Junction Table
// =============================================================================
// Many-to-many relationship between ideas and categories

Table idea_categories {
  idea_id bigint [not null, ref: > ideas.id]
  category_id bigint [not null, ref: > categories.id]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (idea_id, category_id) [pk]
    category_id [name: 'idea_categories_category_id_idx', note: 'Find ideas by category']
  }

  Note: 'Junction table linking ideas to categories (many-to-many)'
}

// =============================================================================
// Relationships
// =============================================================================

Ref: idea_categories.idea_id > ideas.id [delete: cascade]
Ref: idea_categories.category_id > categories.id [delete: cascade]
